--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 </head>
 <body>
 	<div class="container">
+
 		<div class="square">
+
 			<a href="#"><img src="./icon/front-end.png" alt="front-end"></a>
 			<a href="#"><img src="./icon/full_stack.png" alt=""full stack></a>
 			<a href="#"><img src="./icon/node.png" alt="node.js"></a>
 			<a href="#"><img src="./icon/react-native.png" alt="react native"></a>
+			<h1>Skills</h1>
 		</div>
 	</div>
 	
