--- a/index.html
+++ b/index.html
@@ -3,19 +3,25 @@
 <head>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+	<script src="main.js"type="text/javascript"></script>
 
 	<title>hover icons</title>
 </head>
 <body>
 	<div class="container">
-
-		<div class="square">
+		<div id="square">
 
 			<a href="#"><img src="./icon/front-end.png" alt="front-end"></a>
 			<a href="#"><img src="./icon/full_stack.png" alt=""full stack></a>
 			<a href="#"><img src="./icon/node.png" alt="node.js"></a>
 			<a href="#"><img src="./icon/react-native.png" alt="react native"></a>
 			<h1>Skills</h1>
+		</div>
+
+		<div class="test">
+			test
 		</div>
 	</div>
 	
